updated comments and api specification, plus updated mutation tests